[package]
name = "rsmount-sys"
description = "Raw FFI bindings to the `util-linux/libmount` C library"
version = "0.2.0"
authors = ["Nick Piaddo <nick.piaddo@protonmail.com>"]
license = "Apache-2.0 OR MIT"
rust-version = "1.72"
edition = "2021"
repository = "https://github.com/nickpiaddo/rsmount-sys"
homepage = "https://github.com/nickpiaddo/rsmount-sys"
documentation = "https://docs.rs/rsmount-sys"
readme = "crates-io.md"
keywords = ["ffi", "bindings", "libmount"]
categories = ["external-ffi-bindings", "os"]
exclude = ["web-snapshots/*"]
build = "build/build.rs"
links = "mount"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.66.1"
cc = "1.1.28"
pkg-config = "0.3.30"
